# cwe_db

./: README.md  pyproject.toml
cwe_db/: __init__.py  cli.py  main.py
